# theforexprofetex

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
data/: theforexprophetess.db
src/core/: logging.py  settings.py  vault.py
src/db/: database.py
src/handlers/: admin.py  faq.py  group_access.py  keyboards.py  menu.py  signals.py  verification.py  welcome.py
src/middleware/: rate_limit.py
src/services/: activity_checker.py  exness_client.py
