[project]
name = "Theforexprofetex-bot"
version = "0.1.0"
description = "Theforexprofetex Telegram bot — verifies Exness partner linkage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=48.0.0",
    "httpx>=0.25.2",
    "python-dotenv==1.0.1",
    "python-telegram-bot[job-queue,webhooks]==21.5",
    "structlog>=25.5.0",
]

[project.scripts]
Theforexpropfetex-bot = "main:main"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.23"]
